2010-10-19  Charlie Zender  <zender@uci.edu>

	* Merge first half of ncbo.c 4.0.5 into mpncbo.c

2010-10-17  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.6 release procedure:
 	Changes since nco-4_0_5: fxm
	cd ~/nco;cvs tag -d nco-4_0_6;cvs tag -d nco-4_0_6-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.6 release"
	cvs tag -c nco-4_0_6;cvs tag -c nco-4_0_6-1

	* Fix typos and missing semi-colons in ncap2 docs

2010-10-13  Charlie Zender  <zender@uci.edu>

	* Revert comment mangled by rx in nco_netcdf.c

	* NCO 4.0.5 release procedure:
 	Changes since nco-4_0_4: fix ncks hyp NC4 bug, ncra CF crd bug
	cd ~/nco;cvs tag -d nco-4_0_5;cvs tag -d nco-4_0_5-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.5 release"
	cvs tag -c nco-4_0_5;cvs tag -c nco-4_0_5-1

	* Make buildpackage and pbuilder scripts use DEB_BUILD_OPTIONS

	* Revert to pre-20101007 behavior to NOT-translate two-character
	user-input string "\0" to NUL.

2010-10-12  Charlie Zender  <zender@uci.edu>

	* Change bld/Makefile defaults to NETCDF4=Y, UDUNITS2=Y

2010-10-11  Charlie Zender  <zender@uci.edu>

	* Alter builds to use Debian-supplied UDUnits2

	* Verify Debian builds netCDF4 and DAP-enabled NCO with libnetcdf6

	* Change from Debian libnetcdf4 to libnetcdf6 thanks to Maverick Meerkat

	* Fix (perhaps) HDF5_LIB_DIR handling in configure.in

	* Daily-build libnetcdf4 fixes problem writing ushort_max=65535us

2010-10-08  Charlie Zender  <zender@uci.edu>

	* Improve debugging messages in nco_lmt.c

	* Fix typos in comments

	* Improve in.cdl diagnostics for packed variables and _FillValue

2010-10-07  Charlie Zender  <zender@uci.edu>

	* Translate two-character user-input string "\0" to NUL.
	This allows ncatted and ncap2 users to insert NUL into strings
	and to NUL-initialize strings with, e.g.,
	sng_new[lat,sng_lng]="\0";

2010-10-06  Charlie Zender  <zender@uci.edu>

	* Fix bug where ncra incorrectly treats record variable as a
	fixed variable if it is specified in the "coordinates" attribute